# prototype

./: .gitignore  README.md  pyproject.toml
alembic/: env.py
app/: database.py  main.py
app/core/: config.py  container.py
app/models/: user.py
app/repositories/: abstract_user_repository.py  sqlalchemy_user_repository.py
app/routers/: user_router.py
app/schemas/: user.py
app/services/: user_service.py
src/: main.py
src/BaseModels/: BaseModel.py
src/users/: crud.py  db_helper.py  models.py  router.py  schemas.py
